# simpleWorkflow

./: .gitignore  CYCLE_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  run.py  scratch_flag_test.py
.github/workflows/: tests.yml
app/: DateTimeParser.py  DynamicTaskScheduler.py  EmailConfigManager.py  ScriptExecutor.py  TaskScheduler.py  __init__.py  scripts.yaml
docs/: cycles.md  legacy.md  pbs.md  roadmap.md  workflow_format.md
examples/: hello.yaml  monan_jedi_3dvar.yaml  parallel_retry.yaml  pbs_hello.yaml  smna_gsi_bam.yaml
examples/cycle/: workflow.yaml
simpleworkflow/: __init__.py  artifacts.py  cli.py  config.py  console.py  cycles.py  engine.py  executor.py  pbs.py  provenance.py  runs.py  signature.py  state.py
simpleworkflow/cli/: __init__.py  arguments.py  instances.py  main.py
simpleworkflow/cycles/: __init__.py  core.py
test/: script11.sh  script_config.yaml
tests/: test_artifacts.py  test_attempt_execution.py  test_cli_cycles.py  test_cli_output.py  test_config.py  test_config_contract.py  test_console.py  test_cycle_resume.py  test_cycle_yaml_timestamps.py  test_cycles.py  test_dry_run_artifacts.py  test_engine.py  test_pbs.py  test_provenance.py  test_required_outputs.py  test_run_recorder_lifecycle.py  test_runs.py  test_signature.py  test_signature_reuse.py
unittests/: test_DynamicTaskScheduler.py  test_EmailConfigManager.py  test_ScriptExecutor.py  test_TaskScheduler.py  test_TimeParser.py
