[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleworkflow"
version = "0.1.0"
description = "Lightweight YAML workflow runner for scientific pipelines."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
simpleworkflow = "simpleworkflow.cli:main"

[tool.setuptools.packages.find]
include = ["simpleworkflow*"]
exclude = ["app*", "unittests*", "tests*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
