[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleworkflow"
version = "0.2.0"
description = "Lightweight YAML workflow runner for scientific pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
simpleworkflow = "simpleworkflow.cli:main"
swf = "simpleworkflow.cli:main"

[tool.setuptools.packages.find]
include = ["simpleworkflow*"]
exclude = ["app*", "unittests*", "tests*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["simpleworkflow"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 92
exclude = ["app", "unittests", "test"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = [
  "simpleworkflow/engine.py",
  "simpleworkflow/executor.py",
  "simpleworkflow/pbs.py",
]
follow_imports = "skip"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
